welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:8: error: not found: value vaction
  if (vaction==true) {
      ^