welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
var dodo = false

def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
  if (weekday==false) {
    dodo = true
    return dodo
  }
  if (vaction==true) {
    dodo = true
    return dodo
  }
  else {
    dodo = false
  	return dodo
  }
}